换种方式实现上下左右滚动的ListView

--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
         <activity android:name=".columndivider.ColumnDividerActivity" />
 
         <activity android:name=".refresh.RefreshActivity" />
+
+        <activity android:name=".perfect.PerfectActivity" />
     </application>
 
 </manifest>
