修改当需要listView的title和content的高度不一样的时候，contentView复用错乱问题。

--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -37,6 +37,8 @@
 
         <activity android:name=".perfect.refresh.PerfectRefreshActivity" />
 
+        <activity android:name=".perfect.divider.DividerActivity" />
+
     </application>
 
 </manifest>
