类似抽屉菜单的实现

--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -39,6 +39,8 @@
 
         <activity android:name=".perfect.divider.DividerActivity" />
 
+        <activity android:name=".stick.StickyNavActivity" />
+
     </application>
 
 </manifest>
